<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_main_activity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:theme="@style/Theme.Cats"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cd_cat_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="8dp"
        app:contentPadding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tb_main_activity">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:src="@drawable/cat_one"
            />

        <TextView
            android:id="@+id/tv_cat_one_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/misha"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:layout_gravity="center|top"/>

        <TextView
            android:id="@+id/tv_cat_one_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/funny_and_cute_puss"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center|bottom"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_details_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details"
            android:background="@drawable/btn_background"
            android:layout_gravity="center|end"
            />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cd_cat_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="8dp"
        app:contentPadding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cd_cat_one">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:src="@drawable/cat_two"
            />

        <TextView
            android:id="@+id/tv_cat_two_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sasha"
            android:textSize="15sp"
            android:layout_marginTop="5dp"
            android:textStyle="bold"
            android:layout_gravity="center|top"/>

        <TextView
            android:id="@+id/tv_cat_two_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/little_red_brawler"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center|bottom"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_details_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details"
            android:background="@drawable/btn_background"
            android:layout_gravity="center|end"
            />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cd_cat_three"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="8dp"
        app:contentPadding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cd_cat_two">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:src="@drawable/cat_three"
            />

        <TextView
            android:id="@+id/tv_cat_three_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/masha"
            android:textSize="15sp"
            android:layout_marginTop="5dp"
            android:textStyle="bold"
            android:layout_gravity="center|top"/>

        <TextView
            android:id="@+id/tv_cat_three_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/playful_and_sweet_kitty"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center|bottom"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_details_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details"
            android:background="@drawable/btn_background"
            android:layout_gravity="center|end"
            />

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>